--- a/src/Makefile-server.am
+++ b/src/Makefile-server.am
@@ -27,7 +27,7 @@ su_sbin_SCRIPTS += mount.fuse.ceph
 if WITH_MON
 
 ceph_mon_SOURCES = ceph_mon.cc
-ceph_mon_LDADD = $(LIBMON) $(LIBOS) $(CEPH_GLOBAL) $(LIBCOMMON) $(LIBAUTH) $(LIBCOMMON) $(LIBMON_TYPES)
+ceph_mon_LDADD = $(LIBMON) $(LIBOS) $(CEPH_GLOBAL) $(LIBCOMMON) $(LIBAUTH) $(LIBCOMMON) $(LIBMON_TYPES) $(LIBKVSTORE)  
 bin_PROGRAMS += ceph-mon
 
 endif # WITH_MON
@@ -46,7 +46,8 @@ ceph_osd_SOURCES = ceph_osd.cc
 ceph_osd_LDADD = \
 	$(LIBOSDC) $(LIBOSD) $(LIBOSD_TYPES) $(LIBOS_TYPES) \
 	$(LIBOS) \
-	$(CEPH_GLOBAL) $(LIBCOMMON)
+	$(CEPH_GLOBAL) $(LIBCOMMON) \
+	$(LIBKVSTORE) $(LIBFILESTORE) $(LIBMEMSTORE)
 if WITH_LTTNG
 ceph_osd_LDADD += $(LIBOSD_TP)
 endif
