--- a/src/osd/Makefile.am
+++ b/src/osd/Makefile.am
@@ -25,9 +25,15 @@ libosd_a_SOURCES = \
 	osd/SnapMapper.cc \
 	objclass/class_api.cc
 
-libosd_a_CXXFLAGS = ${AM_CXXFLAGS}
-libosd_a_LIBADD =
-noinst_LIBRARIES += libosd.a
+libosd_la_CXXFLAGS = ${AM_CXXFLAGS}
+if WITH_KINETIC
+libosd_la_CXXFLAGS += -std=gnu++11
+endif
+libosd_la_LIBADD = $(LIBOSDC) $(LIBOS) $(LIBCOMMON) $(LIBOSD_TYPES)
+if WITH_LTTNG
+libosd_la_LIBADD += $(LIBOSD_TP)
+endif
+noinst_LTLIBRARIES += libosd.la
 
 noinst_HEADERS += \
 	osd/ClassHandler.h \
