Made libcommon and os as shared objects to resolve lttng problems
Signed-off-by: Varada Kari <varada.kari@sandisk.com>

--- a/src/Makefile-env.am
+++ b/src/Makefile-env.am
@@ -199,7 +199,7 @@ LIBCOMPRESSOR = libcompressor.la -lsnappy
 LIBJSON_SPIRIT = libjson_spirit.la
 LIBKV = libkv.a
 LIBLOG = liblog.la
-LIBOS = libos.la
+LIBOS = libceph_os.la
 LIBKVSTORE = libceph_keyvaluestore.la
 LIBMEMSTORE = libceph_memstore.la
 LIBFILESTORE = libceph_filestore.la
