--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -53,6 +53,7 @@ BuildRequires:  bzip2-devel
 BuildRequires:	cryptsetup
 BuildRequires:	gdbm
 BuildRequires:	hdparm
+BuildRequires:	leveldb-devel > 1.2
 BuildRequires:	libaio-devel
 BuildRequires:	libcurl-devel
 BuildRequires:	libedit-devel
@@ -61,10 +62,9 @@ BuildRequires:	libuuid-devel
 BuildRequires:	libblkid-devel >= 2.17
 BuildRequires:	libudev-devel
 BuildRequires:	libtool
-BuildRequires:	leveldb-devel > 1.2
 BuildRequires:	make
-BuildRequires:	perl
 BuildRequires:	parted
+BuildRequires:	perl
 BuildRequires:	pkgconfig
 BuildRequires:	python
 BuildRequires:	python-nose
@@ -109,6 +109,15 @@ Requires(preun):chkconfig
 Requires(preun):initscripts
 BuildRequires:	gperftools-devel
 Requires:	python-flask
+%endif
+# lttng and babeltrace for rbd-replay-prep
+%if 0%{?fedora} || 0%{?rhel} == 6
+BuildRequires:	lttng-ust-devel
+BuildRequires:	libbabeltrace-devel
+%endif
+%if 0%{?suse_version} >= 1310
+BuildRequires:	lttng-ust-devel
+BuildRequires:  babeltrace-devel
 %endif
 
 %description
@@ -328,11 +337,6 @@ Summary:	Ceph benchmarks and test tools
 Group:		System Environment/Libraries
 License:	LGPL-2.0
 Requires:	ceph-common
-Requires:	xmlstarlet
-%if (0%{?fedora} || 0%{?rhel} == 6)
-BuildRequires:	lttng-ust-devel
-BuildRequires:	libbabeltrace-devel
-%endif
 %description -n ceph-test
 This package contains Ceph benchmarks and test tools.
 
