librbd: add replay support for IO events
Signed-off-by: Jason Dillaman <dillaman@redhat.com>

--- a/src/librbd/Makefile.am
+++ b/src/librbd/Makefile.am
@@ -24,6 +24,7 @@ librbd_internal_la_SOURCES = \
 	librbd/ImageWatcher.cc \
 	librbd/internal.cc \
 	librbd/Journal.cc \
+	librbd/JournalReplay.cc \
 	librbd/LibrbdAdminSocketHook.cc \
 	librbd/LibrbdWriteback.cc \
 	librbd/ObjectMap.cc \
@@ -69,6 +70,7 @@ noinst_HEADERS += \
 	librbd/ImageWatcher.h \
 	librbd/internal.h \
 	librbd/Journal.h \
+	librbd/JournalReplay.h \
 	librbd/JournalTypes.h \
 	librbd/LibrbdAdminSocketHook.h \
 	librbd/LibrbdWriteback.h \
