--- a/src/librbd/Makefile.am
+++ b/src/librbd/Makefile.am
@@ -25,6 +25,9 @@ librbd_internal_la_SOURCES = \
 	librbd/LibrbdAdminSocketHook.cc \
 	librbd/LibrbdWriteback.cc \
 	librbd/ObjectMap.cc \
+	librbd/object_map/Request.cc \
+	librbd/object_map/ResizeRequest.cc \
+	librbd/object_map/UpdateRequest.cc \
 	librbd/operation/FlattenRequest.cc \
 	librbd/operation/RebuildObjectMapRequest.cc \
 	librbd/operation/Request.cc \
@@ -83,6 +86,9 @@ noinst_HEADERS += \
 	librbd/SnapInfo.h \
 	librbd/TaskFinisher.h \
 	librbd/WatchNotifyTypes.h \
+	librbd/object_map/Request.h \
+	librbd/object_map/ResizeRequest.h \
+	librbd/object_map/UpdateRequest.h \
 	librbd/operation/FlattenRequest.h \
 	librbd/operation/RebuildObjectMapRequest.h \
 	librbd/operation/Request.h \
