--- a/suites/ceph-deploy/basic/tasks/ceph-deploy_hello_world.yaml
+++ b/suites/ceph-deploy/basic/tasks/ceph-deploy_hello_world.yaml
@@ -14,6 +14,14 @@ roles:
 - - osd.1
   - mon.b
   - client.0
+openstack:
+  machine:
+    disk: 10 # GB
+    ram: 2000 # MB
+    cpus: 1
+  volumes: # attached to each instance
+    count: 3
+    size: 10 # GB
 tasks:
 - install:
      extras: yes
