cmake: add cls_timeindex to rgw targets
Signed-off-by: Casey Bodley <cbodley@redhat.com>

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1528,6 +1528,7 @@ if(${WITH_RADOSGW})
     cls_rgw_client
     cls_user_client
     cls_lock_client
+    cls_timeindex_client
     boost_regex
     ${BLKID_LIBRARIES}
     ${CMAKE_DL_LIBS} ${TCMALLOC_LIBS} ${UNITTEST_LIBS} ${CRYPTO_LIBS})
@@ -1555,6 +1556,7 @@ if(${WITH_RADOSGW})
     cls_rgw_client
     cls_user_client
     cls_lock_client
+    cls_timeindex_client
     boost_regex
     ${BLKID_LIBRARIES}
     ${CMAKE_DL_LIBS}
