--- a/src/tools/Makefile-client.am
+++ b/src/tools/Makefile-client.am
@@ -45,6 +45,7 @@ rbd_SOURCES = \
 	tools/rbd/action/Import.cc \
 	tools/rbd/action/ImportDiff.cc \
 	tools/rbd/action/Info.cc \
+	tools/rbd/action/Journal.cc \
 	tools/rbd/action/Kernel.cc \
 	tools/rbd/action/List.cc \
 	tools/rbd/action/Lock.cc \
@@ -63,7 +64,8 @@ noinst_HEADERS += \
 	tools/rbd/Shell.h \
 	tools/rbd/Utils.h
 rbd_LDADD = \
-	$(LIBKRBD) $(LIBRBD) $(LIBRADOS) $(CEPH_GLOBAL) \
+	libjournal.la libcls_journal_client.la \
+	$(LIBKRBD) $(LIBRBD) $(LIBRBD_TYPES) $(LIBRADOS) $(CEPH_GLOBAL) \
 	$(BOOST_REGEX_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS)
 if LINUX
 bin_PROGRAMS += rbd
