cmake: Fixed failing dlopens for unittests
Mimicked automake .libs directory in src dir,
put necessary libraries in it, made symlinks
for targets needed for failing test shell scripts
in src dir

First 16 tests still fail

Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -301,117 +301,157 @@ target_link_libraries(bench_log global pthread rt ${BLKID_LIBRARIES} ${CMAKE_DL_
 
 ## Unit tests
 #make check starts here
-add_custom_target(symlinks  COMMAND
-  ln -sf ${CMAKE_SOURCE_DIR}/src/test/ ${CMAKE_BINARY_DIR}/src/test/ &&
-  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-mon ${CMAKE_BINARY_DIR}/src/test/ &&
-  ln -sf ${CMAKE_BINARY_DIR}/ceph ${CMAKE_BINARY_DIR}/src/test/ &&
-  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-authtool ${CMAKE_BINARY_DIR}/src/test/ &&
-  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-conf ${CMAKE_BINARY_DIR}/src/test/ &&
-  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-osd ${CMAKE_BINARY_DIR}/src/test/ &&
-  ln -sf ${CMAKE_SOURCE_DIR}/src/ceph-disk ${CMAKE_BINARY_DIR}/src/test/ &&
-  ln -sf ${CMAKE_SOURCE_DIR}/qa/ ${CMAKE_BINARY_DIR}/src/
-  COMMENT "Symlinks for test scripts have been created")
-add_dependencies(check symlinks)
-
-add_test(NAME unittest_bufferlist_shell COMMAND bash ${CMAKE_SOURCE_DIR}/src/unittest_bufferlist.sh)
-add_dependencies(check unittest_bufferlist_shell)
-
-add_test(NAME run_tox COMMAND bash ${CMAKE_SOURCE_DIR}/src/ceph-detect-init/run-tox.sh)
-add_dependencies(check run_tox)
-
-add_test(NAME cephtool_test_osd COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/cephtool-test-osd.sh)
-add_dependencies(check cephtool_test_osd)
-
-add_test(NAME check_generated COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/encoding/check-generated.sh)
-add_dependencies(check check_generated)
-
-add_test(NAME cephtool_test_rados COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/cephtool-test-rados.sh)
-add_dependencies(check cephtool_test_rados)
-
-add_test(NAME run_rbd_unit_tests COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/run-rbd-unit-tests.sh)
-add_dependencies(check run_rbd_unit_tests)
-
-add_test(NAME mkfs COMMAND bash	${CMAKE_SOURCE_DIR}/src/test/mon/mkfs.sh)
-add_dependencies(check mkfs)
-
-add_test(NAME misc COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/misc.sh)
-add_dependencies(check misc)
-
-add_test(NAME osd_config COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/osd/osd-config.sh)
-add_dependencies(check osd_config)
-
-add_test(NAME osd_pool_create COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/osd-pool-create.sh)
-add_dependencies(check osd_pool_create)
-
-add_test(NAME osd_copy_from COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/osd/osd-copy-from.sh)
-add_dependencies(check osd_copy_from)
-
-add_test(NAME mon_handle_forward COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/mon-handle-forward.sh)
-add_dependencies(check mon_handle_forward)
-
-add_test(NAME osd_erasure_code_profile COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/osd-erasure-code-profile.sh)
-add_dependencies(check osd_erasure_code_profile)
-
-add_test(NAME osd_crush COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/osd-crush.sh)
-add_dependencies(check osd_crush)
-
-add_test(NAME mon_scrub COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/mon-scrub.sh)
-add_dependencies(check mon_scrub)
-
-add_test(NAME mon_ping COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/mon-ping.sh)
-add_dependencies(check mon_ping)
-
-add_test(NAME test_ceph_daemon COMMAND python ${CMAKE_SOURCE_DIR}/src/test/pybind/test_ceph_daemon.py)
-add_dependencies(check test_ceph_daemon)
-
-add_test(NAME rados_striper COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/libradosstriper/rados-striper.sh)
-add_dependencies(check rados_striper)
-
-add_test(NAME osd_bench COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/osd/osd-bench.sh)
-add_dependencies(check osd_bench)
-
-add_test(NAME osd_reactivate COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/osd/osd-reactivate.sh)
-add_dependencies(check osd_reactivate)
-
-add_test(NAME test_erasure_code COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/erasure-code/test-erasure-code.sh)
-add_dependencies(check test_erasure_code)
-
-add_test(NAME cephtool_test_mds COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/cephtool-test-mds.sh)
-add_dependencies(check cephtool_test_mds)
-
-add_test(NAME test_ceph_argparse_py COMMAND python ${CMAKE_SOURCE_DIR}/src/test/pybind/test_ceph_argparse.py)
-add_dependencies(check test_ceph_argparse_py)
-
-add_test(NAME test_erasure_eio COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/erasure-code/test-erasure-eio.sh)
-add_dependencies(check test_erasure_eio)
-
-add_test(NAME ceph_disk COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/ceph-disk.sh)
-add_dependencies(check ceph_disk)
-
-add_test(NAME readable COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/encoding/readable.sh)
-add_dependencies(check readable)
-
-add_test(NAME ceph_objectstore_tool COMMAND python ${CMAKE_SOURCE_DIR}/src/test/ceph_objectstore_tool.py)
-add_dependencies(check ceph_objectstore_tool)
-
-add_test(NAME test_ceph_helpers COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/test-ceph-helpers.sh)
-add_dependencies(check test_ceph_helpers)
-
-add_test(NAME cephtool_test_mon COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/cephtool-test-mon.sh)
-add_dependencies(check cephtool_test_mon)
-
-add_test(NAME encode_decode_non_regression COMMAND bash ${CMAKE_SOURCE_DIR}/qa/workunits/erasure-code/encode-decode-non-regression.sh)
-add_dependencies(check encode_decode_non_regression)
-
-add_test(NAME osd_scrub_repair COMMAND bash ${CMAKE_SOURCE_DIR}/src/osd/osd-scrub-repair.sh)
-add_dependencies(check osd_scrub_repair)
-
 set(UNITTEST_LIBS gtest_main ${PTHREAD_LIBS})
 set(UNITTEST_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${CMAKE_SOURCE_DIR}/src/gtest/include -I${CMAKE_BINARY_DIR}/src/gtest/include -fno-strict-aliasing")
 
 set(UNITTEST_LIBS gmock_main gmock gtest ${PTHREAD_LIBS})
 set(UNITTEST_CXX_FLAGS "-I${CMAKE_SOURCE_DIR}/src/gmock/include -I${CMAKE_BINARY_DIR}/src/gmock/include -I${CMAKE_SOURCE_DIR}/src/gmock/gtest/include -I${CMAKE_BINARY_DIR}/src/gmock/gtest/include -fno-strict-aliasing")
-  
+
+add_dependencies(check symlinks)
+add_dependencies(check ceph-mon)
+add_dependencies(check ceph)
+add_dependencies(check ceph-authtool)
+add_dependencies(check get_command_descriptions)
+add_dependencies(check crushtool)
+add_dependencies(check ceph-conf)
+add_dependencies(check rados)
+add_dependencies(check ceph-mds)
+add_dependencies(check monmaptool)
+add_dependencies(check ceph-osd)
+add_dependencies(check ceph-dencoder)
+
+add_test(NAME test_ceph_helpers COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/test-ceph-helpers.sh WORKING_DIRECTORY ${CMAKE_SOURE_DIR}/src)
+add_dependencies(check test_ceph_helpers)
+
+add_test(NAME osd_config COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/osd/osd-config.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check osd_config)
+
+add_test(NAME osd_copy_from COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/osd/osd-copy-from.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check osd_copy_from)
+
+add_test(NAME osd_crush COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/osd-crush.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check osd_crush)
+
+add_test(NAME rados_striper COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/libradosstriper/rados-striper.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check rados_striper)
+
+add_test(NAME osd_bench COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/osd/osd-bench.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check osd_bench)
+
+add_test(NAME test_erasure_code COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/erasure-code/test-erasure-code.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check test_erasure_code)
+
+add_test(NAME test_erasure_eio COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/erasure-code/test-erasure-eio.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check test_erasure_eio)
+
+add_test(NAME osd_scrub_repair COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/osd/osd-scrub-repair.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check osd_scrub_repair)
+
+add_test(NAME cephtool_test_rados COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/cephtool-test-rados.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check cephtool_test_rados)
+
+add_test(NAME cephtool_test_mon COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/cephtool-test-mon.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check cephtool_test_mon)
+
+add_test(NAME ceph_objectstore_tool COMMAND python ${CMAKE_SOURCE_DIR}/src/test/ceph_objectstore_tool.py WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check ceph_objectstore_tool)
+
+add_test(NAME ceph_disk COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/ceph-disk.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check ceph_disk)
+
+# unittest_admin_socket
+add_executable(unittest_admin_socket EXCLUDE_FROM_ALL
+  admin_socket.cc
+  $<TARGET_OBJECTS:heap_profiler_objs>
+  )
+add_test(unittest_admin_socket unittest_admin_socket)
+add_dependencies(check unittest_admin_socket)
+target_link_libraries(unittest_admin_socket global ${CMAKE_DL_LIBS}
+  ${TCMALLOC_LIBS} ${UNITTEST_LIBS})
+set_target_properties(unittest_admin_socket PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+
+# unittest_blkdev
+add_executable(unittest_blkdev EXCLUDE_FROM_ALL
+  common/test_blkdev.cc
+  $<TARGET_OBJECTS:heap_profiler_objs>
+  )
+add_test(unittest_blkdev unittest_blkdev)
+add_dependencies(check unittest_blkdev)
+target_link_libraries(unittest_blkdev
+  global
+  ${BLKID_LIBRARIES}
+  ${CMAKE_DL_LIBS}
+  ${TCMALLOC_LIBS}
+  ${UNITTEST_LIBS})
+set_target_properties(unittest_blkdev PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+
+# unittest_chain_xattr
+add_executable(unittest_chain_xattr EXCLUDE_FROM_ALL
+  objectstore/chain_xattr.cc
+  $<TARGET_OBJECTS:heap_profiler_objs>
+  )
+add_test(unittest_chain_xattr unittest_chain_xattr) 
+add_dependencies(check unittest_chain_xattr)
+target_link_libraries(unittest_chain_xattr
+  os
+  global
+  ${CMAKE_DL_LIBS}
+  ${TCMALLOC_LIBS}
+  ${UNITTEST_LIBS}
+  )
+set_target_properties(unittest_chain_xattr PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+
+add_test(NAME mkfs COMMAND bash	${CMAKE_SOURCE_DIR}/src/test/mon/mkfs.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check mkfs)
+
+add_test(NAME misc COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/misc.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check misc)
+
+add_test(NAME test_ceph_daemon COMMAND python ${CMAKE_SOURCE_DIR}/src/test/pybind/test_ceph_daemon.py WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src/test/pybind)
+add_dependencies(check test_ceph_daemon)
+
+add_test(NAME test_ceph_argparse_py COMMAND python ${CMAKE_SOURCE_DIR}/src/test/pybind/test_ceph_argparse.py WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/src/test)
+add_dependencies(check test_ceph_argparse_py)
+
+add_test(NAME unittest_bufferlist_shell COMMAND bash ${CMAKE_SOURCE_DIR}/src/unittest_bufferlist.sh)
+add_dependencies(check unittest_bufferlist_shell)
+
+add_test(NAME osd_reactivate COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/osd/osd-reactivate.sh)
+add_dependencies(check osd_reactivate)
+
+add_test(NAME run_tox COMMAND bash ${CMAKE_SOURCE_DIR}/src/ceph-detect-init/run-tox.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check run_tox)
+
+add_test(NAME cephtool_test_osd COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/cephtool-test-osd.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check cephtool_test_osd)
+
+add_test(NAME check_generated COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/encoding/check-generated.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check check_generated)
+
+add_test(NAME run_rbd_unit_tests COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/run-rbd-unit-tests.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check run_rbd_unit_tests)
+
+add_test(NAME osd_pool_create COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/osd-pool-create.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check osd_pool_create)
+
+add_test(NAME mon_handle_forward COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/mon-handle-forward.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check mon_handle_forward)
+
+add_test(NAME osd_erasure_code_profile COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/mon/osd-erasure-code-profile.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check osd_erasure_code_profile)
+
+add_test(NAME cephtool_test_mds COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/cephtool-test-mds.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check cephtool_test_mds)
+
+add_test(NAME readable COMMAND bash ${CMAKE_SOURCE_DIR}/src/test/encoding/readable.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check readable)
+
+add_test(NAME encode_decode_non_regression COMMAND bash ${CMAKE_SOURCE_DIR}/qa/workunits/erasure-code/encode-decode-non-regression.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+add_dependencies(check encode_decode_non_regression)
+
 # unittest_encoding
 add_executable(unittest_encoding EXCLUDE_FROM_ALL
   encoding.cc
@@ -435,22 +475,6 @@ target_link_libraries(unittest_addrs cephfs librados pthread rt m
   ${BLKID_LIBRARIES} ${CMAKE_DL_LIBS} ${TCMALLOC_LIBS} ${UNITTEST_LIBS})
 set_target_properties(unittest_addrs
   PROPERTIES COMPILE_FLAGS ${UNITTEST_CXX_FLAGS})
-
-# unittest_blkdev
-add_executable(unittest_blkdev EXCLUDE_FROM_ALL
-  common/test_blkdev.cc
-  $<TARGET_OBJECTS:heap_profiler_objs>
-  )
-add_test(unittest_blkdev unittest_blkdev)
-add_dependencies(check unittest_blkdev)
-target_link_libraries(unittest_blkdev
-  global
-  ${BLKID_LIBRARIES}
-  ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
-  ${UNITTEST_LIBS})
-set_target_properties(unittest_blkdev PROPERTIES COMPILE_FLAGS
-  ${UNITTEST_CXX_FLAGS})
 
 # unittest_bloom_filter
 add_executable(unittest_bloom_filter EXCLUDE_FROM_ALL
@@ -894,18 +918,6 @@ target_link_libraries(unittest_perf_counters global ${CMAKE_DL_LIBS}
 set_target_properties(unittest_perf_counters PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
 
-# unittest_admin_socket
-add_executable(unittest_admin_socket EXCLUDE_FROM_ALL
-  admin_socket.cc
-  $<TARGET_OBJECTS:heap_profiler_objs>
-  )
-add_test(unittest_admin_socket unittest_admin_socket)
-add_dependencies(check unittest_admin_socket)
-target_link_libraries(unittest_admin_socket global ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS} ${UNITTEST_LIBS})
-set_target_properties(unittest_admin_socket PROPERTIES COMPILE_FLAGS
-  ${UNITTEST_CXX_FLAGS})
-
 # unittest_ceph_crypto
 add_executable(unittest_ceph_crypto EXCLUDE_FROM_ALL
   ceph_crypto.cc
@@ -1000,25 +1012,6 @@ add_dependencies(check unittest_context)
 target_link_libraries(unittest_context global ${CMAKE_DL_LIBS}
   ${TCMALLOC_LIBS} ${UNITTEST_LIBS})
 set_target_properties(unittest_context PROPERTIES COMPILE_FLAGS
-  ${UNITTEST_CXX_FLAGS})
-
-# unittest_chain_xattr
-add_executable(unittest_chain_xattr EXCLUDE_FROM_ALL
-  objectstore/chain_xattr.cc
-  $<TARGET_OBJECTS:heap_profiler_objs>
-  )
-set_target_properties(unittest_chain_xattr PROPERTIES COMPILE_FLAGS
-  ${UNITTEST_CXX_FLAGS})
-add_test(unittest_chain_xattr unittest_chain_xattr)
-add_dependencies(check unittest_chain_xattr)
-target_link_libraries(unittest_chain_xattr
-  os
-  global
-  ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
-  ${UNITTEST_LIBS}
-  )
-set_target_properties(unittest_chain_xattr PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
 
 # unittest_safe_io
@@ -1426,8 +1419,26 @@ target_link_libraries(unittest_async_compressor
   ${UNITTEST_LIBS})
 set_target_properties(unittest_async_compressor PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
+  
+add_custom_target(symlinks  COMMAND
+  mkdir -p ${CMAKE_SOURCE_DIR}/src/.libs &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/libcephfs.so.1 ${CMAKE_SOURCE_DIR}/src/.libs &&
+  ln -sf ${CMAKE_BINARY_DIR}/ceph ${CMAKE_SOURCE_DIR}/src/ &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-mon ${CMAKE_SOURCE_DIR}/src/ &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-osd ${CMAKE_SOURCE_DIR}/src/ &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-mds ${CMAKE_SOURCE_DIR}/src/ &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-conf ${CMAKE_SOURCE_DIR}/src/ &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-dencoder ${CMAKE_SOURCE_DIR}/src/ &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/rados ${CMAKE_SOURCE_DIR}/src/ &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/monmaptool ${CMAKE_SOURCE_DIR}/src/ &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/crushtool ${CMAKE_SOURCE_DIR}/src/ &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/ceph-authtool ${CMAKE_SOURCE_DIR}/src &&
+  ln -sf ${CMAKE_BINARY_DIR}/src/test/unittest_librbd ${CMAKE_SOURCE_DIR}/src
+  #ln -sf ${CMAKE_BINARY_DIR}/src/test/unittest_bufferlist_shell ${CMAKE_SOURCE_DIR}/src
+  COMMENT "Symlinks for test scripts have been created")
 
 add_subdirectory(erasure-code EXCLUDE_FROM_ALL)
+
 #make check ends here
 
 if(${WITH_RADOSGW})
