--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,11 +64,6 @@ else(no_yasm)
 endif(no_yasm)
 
 
-set(CMAKE_ASM_COMPILER  yasm)
-message(status " asm compiler ${CMAKE_ASM_COMPILER}")
-set(CMAKE_ASM_FLAGS "-f elf64")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -rdynamic -Wall -Wtype-limits -Wignored-qualifiers -Winit-self -Wpointer-arith -Werror=format-security -fno-strict-aliasing -fsigned-char -fPIC")
-
 set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -ftemplate-depth-1024 -Wno-invalid-offsetof -Wnon-virtual-dtor -Wno-invalid-offsetof -Wstrict-null-sentinel -Woverloaded-virtual")
 
 # require c++11
@@ -821,6 +816,7 @@ if(${ENABLE_SHARED})
     SOVERSION 1)
 endif(${ENABLE_SHARED})
   target_link_libraries(cephfs client global)
+  set_target_properties(cephfs PROPERTIES VERSION "1.0.0" SOVERSION "1")
   install(TARGETS cephfs DESTINATION lib)
   install(DIRECTORY
     "${CMAKE_SOURCE_DIR}/src/include/cephfs"
