ceph.spec.in: lttng in SLES12 only
Over in the SUSE sector, we are trying to enable the SLE_12 and openSUSE_13.2
build targets. The lttng/babeltrace stuff is currently available only in
SLE_12.

Signed-off-by: Nathan Cutler <ncutler@suse.com>
(cherry picked from commit bf9ca1eb107c4462d8768faf3ff4db7972384ffd)

Conflicts:
	ceph.spec.in
            trivial resolution

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -115,7 +115,7 @@ Requires:	python-flask
 BuildRequires:	lttng-ust-devel
 BuildRequires:	libbabeltrace-devel
 %endif
-%if 0%{?suse_version} >= 1310
+%if 0%{?suse_version} == 1315
 BuildRequires:	lttng-ust-devel
 BuildRequires:  babeltrace-devel
 %endif
