ceph.spec.in: lttng in SLES12 only
Over in the SUSE sector, we are trying to enable the SLE_12 and openSUSE_13.2
build targets. The lttng/babeltrace stuff is currently available only in
SLE_12.

Signed-off-by: Nathan Cutler <ncutler@suse.com>
(cherry picked from commit bf9ca1eb107c4462d8768faf3ff4db7972384ffd)

Conflicts:
	ceph.spec.in
            In Hammer, rbd-replay-prep is still in the ceph-test package.

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -112,7 +112,7 @@ BuildRequires:	gperftools-devel
 BuildRequires:	lttng-ust-devel
 BuildRequires:	libbabeltrace-devel
 %endif
-%if 0%{?suse_version} >= 1310
+%if 0%{?suse_version} == 1315
 BuildRequires:	lttng-ust-devel
 BuildRequires:  babeltrace-devel
 %endif
@@ -893,7 +893,7 @@ ln -sf %{_libdir}/librbd.so.1 /usr/lib64/qemu/librbd.so.1
 %{_mandir}/man8/rbd-replay-prep.8*
 %{_bindir}/rbd-replay
 %{_bindir}/rbd-replay-many
-%if 0%{?fedora} || 0%{?rhel} == 6 || 0%{?suse_version} >= 1310
+%if 0%{?fedora} || 0%{?rhel} == 6 || 0%{?suse_version} == 1315
 %{_bindir}/rbd-replay-prep
 %endif
 
