--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -92,7 +92,6 @@ BuildRequires:	/usr/share/selinux/devel/policyhelp
 %endif
 BuildRequires:	gcc-c++
 BuildRequires:	boost-devel
-BuildRequires:  boost-random
 BuildRequires:  cmake
 BuildRequires:	cryptsetup
 BuildRequires:	gdbm
@@ -165,6 +164,10 @@ Requires(preun):	chkconfig
 Requires(preun):	initscripts
 BuildRequires:	gperftools-devel
 Requires:	python-flask
+%endif
+# boost
+%if 0%{?fedora} || 0%{?rhel} 
+BuildRequires:  boost-random
 %endif
 # lttng and babeltrace for rbd-replay-prep
 %if 0%{?fedora} || 0%{?rhel} == 6
