lttng: move tracepoint probes to dynamic libraries
LTTng-UST initializes itself at program load, which means it is
currently always enabled.  This can lead to issues with SElinux
and AppArmor which might restrict access to the necessary device
files.

Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 4a5305e41677885d45b2b74299113a3d00189c66)

Conflicts:
	src/test/Makefile-client.am
	src/tracing/Makefile.am

--- a/src/test/Makefile-client.am
+++ b/src/test/Makefile-client.am
@@ -338,11 +338,14 @@ ceph_test_librbd_api_LDADD = \
 	$(LIBRBD) $(LIBRADOS) $(LIBCOMMON) $(UNITTEST_LDADD) $(RADOS_TEST_LDADD)
 bin_DEBUGPROGRAMS += ceph_test_librbd_api
 
-if WITH_LTTNG
-unittest_librbd_LDADD += $(LIBRBD_TP)
-ceph_test_librbd_LDADD += $(LIBRBD_TP)
-ceph_test_librbd_api_LDADD += $(LIBRBD_TP)
-endif
+noinst_HEADERS += \
+	test/librbd/test_fixture.h \
+	test/librbd/test_mock_fixture.h \
+	test/librbd/test_support.h \
+	test/librbd/mock/MockContextWQ.h \
+	test/librbd/mock/MockImageCtx.h \
+	test/librbd/mock/MockImageWatcher.h \
+	test/librbd/mock/MockObjectMap.h
 
 if LINUX
 ceph_test_librbd_fsx_SOURCES = test/librbd/fsx.cc
