--- a/src/tracing/Makefile.am
+++ b/src/tracing/Makefile.am
@@ -1,8 +1,8 @@
 EXTRA_DIST = tracing-common.h
 
 if WITH_LTTNG
-%.c %.h: %.tp
-	$(LTTNG_GEN_TP_PROG) $< -o $*.c -o $*.h
+%.h: %.tp
+	$(LTTNG_GEN_TP_PROG) $< -o $*.h
 endif
 
 dist_noinst_DATA = \
@@ -23,8 +23,7 @@ nodist_libosd_tp_la_SOURCES = \
 	pg.c
 endif
 libosd_tp_la_LIBADD = -llttng-ust -ldl
-libosd_tp_la_CPPFLAGS = -DTRACEPOINT_PROBE_DYNAMIC_LINKAGE
-libosd_tp_la_CFLAGS = -I$(top_srcdir)/src $(AM_CFLAGS)
+libosd_tp_la_CFLAGS = -I$(top_srcdir)/src $(AM_CFLAGS) -fpic
 libosd_tp_la_LDFLAGS =
 
 if WITH_LTTNG
@@ -33,8 +32,7 @@ nodist_librados_tp_la_SOURCES = \
 	librados.h
 endif
 librados_tp_la_LIBADD = -llttng-ust -ldl
-librados_tp_la_CPPFLAGS = -DTRACEPOINT_PROBE_DYNAMIC_LINKAGE
-librados_tp_la_CFLAGS = -I$(top_srcdir)/src $(AM_CFLAGS)
+librados_tp_la_CFLAGS = -I$(top_srcdir)/src $(AM_CFLAGS) -fpic
 librados_tp_la_LDFLAGS =
 
 if WITH_LTTNG
@@ -43,8 +41,7 @@ nodist_librbd_tp_la_SOURCES = \
 	librbd.h
 endif
 librbd_tp_la_LIBADD = -llttng-ust -ldl
-librbd_tp_la_CPPFLAGS = -DTRACEPOINT_PROBE_DYNAMIC_LINKAGE
-librbd_tp_la_CFLAGS = -I$(top_srcdir)/src $(AM_CFLAGS)
+librbd_tp_la_CFLAGS = -I$(top_srcdir)/src $(AM_CFLAGS) -fpic
 librbd_tp_la_LDFLAGS =
 
 if WITH_LTTNG
@@ -53,28 +50,24 @@ nodist_libos_tp_la_SOURCES = \
 	objectstore.h
 endif
 libos_tp_la_LIBADD = -llttng-ust -ldl
-libos_tp_la_CPPFLAGS = -DTRACEPOINT_PROBE_DYNAMIC_LINKAGE
-libos_tp_la_CFLAGS = -I$(top_srcdir)/src $(AM_CFLAGS)
+libos_tp_la_CFLAGS = -I$(top_srcdir)/src $(AM_CFLAGS) -fpic
 libos_tp_la_LDFLAGS =
 
 if WITH_LTTNG
-noinst_LTLIBRARIES = \
+lib_LTLIBRARIES = \
 	libosd_tp.la \
+	libos_tp.la \
 	librados_tp.la \
-	librbd_tp.la \
-	libos_tp.la
+	librbd_tp.la
 
 BUILT_SOURCES = \
 	librados.h \
 	librbd.h \
+	objectstore.h \
 	oprequest.h \
 	osd.h \
-	pg.h \
-	objectstore.h
+	pg.h
 endif
 
 CLEANFILES = \
-	$(nodist_libosd_tp_la_SOURCES) \
-	$(nodist_librados_tp_la_SOURCES) \
-	$(nodist_librbd_tp_la_SOURCES) \
-	$(nodist_libos_tp_la_SOURCES)
+	$(BUILT_SOURCES)
