--- a/configure.ac
+++ b/configure.ac
@@ -1191,7 +1191,7 @@ AC_CONFIG_FILES([Makefile
 	src/ocf/ceph
 	src/ocf/rbd
 	src/java/Makefile
-	src/tracing/Makefile
+	systemd/Makefile
 	man/Makefile
 	ceph.spec])
 AC_OUTPUT
