--- a/suites/upgrade/client-upgrade/hammer-client-x/basic/1-install/hammer-client-x.yaml
+++ b/suites/upgrade/client-upgrade/hammer-client-x/basic/1-install/hammer-client-x.yaml
@@ -1,10 +1,10 @@
 tasks:
 - install:
-   branch: hammer 
+    branch: hammer 
 - print: "**** done install hammer"
-- install.upgrade:
-   exclude_packages: ['ceph-test', 'ceph-test-dbg']
-   client.0:
-- print: "**** done install.upgrade client.0"
-- ceph: 
-- print: "**** done ceph"
+upgrade_workload:
+  sequential:
+  - install.upgrade:
+      exclude_packages: ['ceph-test', 'ceph-test-dbg']
+      client.0:
+  - print: "**** done install.upgrade client.0"
