--- a/suites/upgrade/client-upgrade/hammer-client-x/basic/2-workload/rbd_cli_import_export.yaml
+++ b/suites/upgrade/client-upgrade/hammer-client-x/basic/2-workload/rbd_cli_import_export.yaml
@@ -1,9 +1,13 @@
 tasks:
+- sequential:
+  - upgrade_workload
+- ceph: 
+- print: "**** done ceph"
 - workunit:
     branch: hammer
     clients:
       client.0:
-        - rbd/import_export.sh
+      - rbd/import_export.sh
     env:
       RBD_CREATE_ARGS: --new-format
 - print: "**** done rbd/import_export.sh"
